data binding and local var

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="container">
-  <form class="form-horizontal" (ngSubmit)="onSubmit()">
+  <form class="form-horizontal" (ngSubmit)="onSubmit(studentForm)" #studentForm="ngForm">
     <div class="form-group">
       <label for="first_name" class="col-sm-2 control-label">First Name</label>
       <div class="col-sm-10">
-        <input type="text" [(ngModel)]="model.first_name" name="first_name" class="form-control" id="first_name" placeholder="e.g. Eric">
+        <input type="text" [ngModel]="model.first_name" ngModel #first_name="ngModel" name="first_name" class="form-control" id="first_name" placeholder="e.g. Eric">
       </div>
     </div>
      <div class="form-group">
       <label for="last_name" class="col-sm-2 control-label">Last Name</label>
       <div class="col-sm-10">
-        <input type="text" [(ngModel)]="model.last_name" name="last_name" class="form-control" id="last_name" placeholder="e.g. Schwartz">
+        <input type="text" [ngModel]="model.last_name" ngModel #last_name="ngModel" name="last_name" class="form-control" id="last_name" placeholder="e.g. Schwartz">
       </div>
     </div>
     <div class="form-group">
